Fix spacing. Fix border-color

--- a/packages/footer/src/sass/_module.scss
+++ b/packages/footer/src/sass/_module.scss
@@ -20,7 +20,8 @@
  * Basic footer block styling.
  */
 .au-footer {
-	@include AU-space( padding, 3unit 0 1.5unit );
+	@include AU-fontgrid( sm );
+	@include AU-space( padding, 3unit 0 3unit );
 	@include AU-space( border-top, 0.25unit solid $AU-color-Border );
 	background-color: $AU-color-Background-light;
 	font-family: $AU-font;
@@ -62,10 +63,9 @@
 		@include AU-space( margin-top, 1unit );
 		border-top: 1px solid $AU-color-Border;
 	}
+}
 
-	& .au-footer--dark {
-		+ .au-footer__end {
-			border-top: 1px solid $AU-colordark-Border;
-		}
-	}
+
+.au-footer--dark .au-footer__navigation + .au-footer__end {
+	border-top: 1px solid $AU-colordark-Border;
 }
